--- a/style.css
+++ b/style.css
@@ -14,3 +14,19 @@ body {
     background-color: #202024;
     height: 100vh;
 }
+
+/* Barra de rolagem */
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #010101;
+}
+
+::-webkit-scrollbar-thumb {
+    cursor: grab;
+    background-color: #7465D4;
+    border-radius: 8px;
+}
