--- a/style.css
+++ b/style.css
@@ -256,10 +256,12 @@ section.sobre .flex {
     font-size: 24px;
     cursor: pointer;
     transition: all 0.4s;
+    transition: .2s;
 }
 
 .btn-social button:hover {
     opacity: 0.8;
+    transform: scale(1.05);
 }
 
 .btn-social .bi-instagram,
@@ -477,6 +479,7 @@ footer {
     color: var(--color-text-primary);
     border-radius: 50%;
     transition: all 0.4s;
+    transition: .2s;
 }
 
 #footer_redes_sociais .footer_links i {
@@ -485,6 +488,7 @@ footer {
 
 #footer_redes_sociais .footer_links:hover {
     opacity: 0.8;
+    transform: scale(1.05);
 }
 
 #instagram {
@@ -564,7 +568,7 @@ footer {
 
 /* Responsivo */
 
-@media screen and (max-width: 1020px) {
+@media screen and (max-width: 1190px) {
     .btn-abrir-menu {
         display: block;
     }
