--- a/style.css
+++ b/style.css
@@ -300,13 +300,14 @@ section.sobre .flex {
 
 /* habilidades */
 
-section.habilidades {
+    section.habilidades {
     padding: 80px 4%;
 }
 
-section.habilidades .flex {
-    gap: 60px;
+.habilidades .flex {
+    display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 .habilidades .habilidades-box {
@@ -320,6 +321,7 @@ section.habilidades .flex {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 30%;
 }
 
 .habilidades .habilidades-box:hover {
@@ -338,7 +340,6 @@ section.habilidades .flex {
     font-size: 24px;
     margin-top: 10px;
 }
-
 /* estilo especialidades */
 section.especiliadades {
     padding: 80px 4%;
@@ -668,7 +669,8 @@ footer {
         gap: 60px;
     }
 
-    .habilidades {
+    .habilidades .habilidades-box {
+        width: 100%;
         text-align: center;
     }
 
@@ -684,9 +686,11 @@ footer {
             bottom: 10px;
         }
 
-        .habilidades {
+        .habilidades .habilidades-box {
+            width: 100%;
             text-align: center;
         }
+
 
         .footer_lista .h3 {
             text-align: center;
@@ -705,7 +709,8 @@ footer {
             font-size: 14px;
         }
 
-        .habilidades {
+        .habilidades .habilidades-box {
+            width: 100%;
             text-align: center;
         }
 
@@ -726,7 +731,8 @@ footer {
             font-size: 14px;
         }
 
-        .habilidades {
+        .habilidades .habilidades-box {
+            width: 100%;
             text-align: center;
         }
 
