--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ header nav.menu-desktop ul li {
 }
 
 .menu-mobile nav ul {
-    text-align: right;
+    text-align: left;
 }
 
 .menu-mobile nav ul li a {
@@ -300,7 +300,7 @@ section.sobre .flex {
 
 /* habilidades */
 
-    section.habilidades {
+section.habilidades {
     padding: 80px 4%;
 }
 
@@ -449,12 +449,18 @@ footer {
 #footer_initial {
     background-color: var(--color-secondary);
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr); /* 3 colunas */
     padding: 3rem 3.5rem;
     align-items: center;
+    justify-items: center;
+    text-align: center;
 }
 
-/* logo e texto */
+#footer_contato {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 #footer_contato img {
     width: 90px;
@@ -465,20 +471,68 @@ footer {
     opacity: 0.9;
 }
 
-#footer_contato a {
+.footer_frase {
+    font-weight: bold;
+    font-size: 1.2rem;
     color: var(--color-text-primary);
-    text-decoration: none;
-    font-weight: 600;
+    margin-top: 1rem;
+    line-height: 40px;
 }
 
-/* redes sociais */
+.footer_frase span {
+    color: #7465D4;
+}
 
+/* Links divididos em duas colunas */
+#footer_veja_mais {
+    text-align: center;
+}
+
+#footer_veja_mais h3 {
+    margin-bottom: 1rem;
+}
+
+.footer_links_duas_colunas {
+    display: flex;
+    gap: 5rem;
+    justify-content: center;
+}
+
+.footer_lista {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+}
+
+.footer_links {
+    color: #fff;
+    text-decoration: none;
+    display: inline-block;
+    transition: .2s;
+}
+
+.footer_links:hover {
+    color: #7465D4;
+    transform: scale(1.05);
+}
+
+/* Redes sociais com título */
 #footer_redes_sociais {
+    text-align: center;
+}
+
+#footer_redes_sociais h3 {
+    font-size: 1.2rem;
+    color: var(--color-text-primary);
+    margin-bottom: 1rem;
+}
+
+.footer_redes_container {
     display: flex;
     justify-content: center;
-    gap: 30px;
-    margin: 0;
-    margin-top: 10px;
+    gap: 20px;
 }
 
 #footer_redes_sociais .footer_links {
@@ -518,56 +572,10 @@ footer {
     background-color: #25D366;
 }
 
-/* lista */
+/* Direitos reservados */
 
-.footer_lista {
-    display: flex;
-    flex-direction: column;
-    gap: 0.75rem;
-    list-style: none;
-    transition: .2s;
-    color: #fff;
-}
-
-.footer_lista .h3 {
-    position: relative;
-    left: 50%;
-}
-
-.footer_links {
-    color: #fff;
-    text-decoration: none;
-    display: inline-block;
-    transition: .2s;
-}
-
-.footer_links:hover {
-    color: #7465D4;
-    transform: scale(1.05);
-}
-
-/* botão de voltar */
-
-#btnVoltarAoTopo {
-    position: fixed;
-    bottom: 10px;
-    right: 15px;
-    z-index: 100;
-    display: none;
-    background-color: var(--color-details);
+#footer_copyright a {
     color: var(--color-text-primary);
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 15px;
-    border-radius: 45%;
-    font-size: 18px;
-    opacity: 0.9;
-    transition: opacity 0.4s, transform 0.2s;
-}
-
-#btnVoltarAoTopo:hover {
-    opacity: 1;
 }
 
 /* copyright */
@@ -581,6 +589,44 @@ footer {
     font-weight: 400;
     color: #fff;
 }
+
+
+
+/* botão de voltar */
+
+.back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    padding: 12px;
+    background-color: #7f37c9;
+    color: #333;
+    border-radius: 50%;
+    border: none;
+    cursor: pointer;
+    display: none;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.back-to-top svg {
+    color: #fff;
+    width: 24px;
+    height: 24px;
+}
+
+.back-to-top:focus {
+    outline: none;
+    box-shadow: 0 0 0 2px #7f37c9;
+}
+
+
+
+
+
+
+
+
+
 
 /* Responsivo */
 
@@ -674,6 +720,36 @@ footer {
         text-align: center;
     }
 
+    #footer_initial {
+        grid-template-columns: 1fr; /* Muda para uma única coluna */
+        padding: 3rem 2rem;
+        gap: 2rem;
+    }
+
+    /* Colocando os links em uma única coluna no centro */
+    .footer_links_duas_colunas {
+        display: flex;
+        flex-direction: column;
+        align-items: center; /* Centraliza os links */
+        gap: 1rem;
+    }
+
+    .footer_lista {
+        display: flex;
+        flex-direction: column;
+        align-items: center; /* Centraliza os links na coluna */
+        gap: 0.75rem;
+    }
+
+    .footer_links {
+        text-align: center;
+    }
+
+    #footer_veja_mais h3 {
+        text-align: center;
+    }
+
+
     /* footer */
     @media screen and (max-width: 768px) {
         #footer_initial {
@@ -681,7 +757,7 @@ footer {
             gap: 2rem;
         }
 
-        #btnVoltarAoTopo {
+        .back-to-top {
             right: 10px;
             bottom: 10px;
         }
@@ -689,13 +765,6 @@ footer {
         .habilidades .habilidades-box {
             width: 100%;
             text-align: center;
-        }
-
-
-        .footer_lista .h3 {
-            text-align: center;
-            position: relative;
-            left: 0;
         }
     }
 
@@ -705,7 +774,7 @@ footer {
             padding: 3rem 2rem;
         }
 
-        #btnVoltarAoTopo {
+        .back-to-top {
             font-size: 14px;
         }
 
@@ -721,14 +790,16 @@ footer {
         }
     }
 
-    @media screen and (max-width: 430px) {
+    @media screen and (max-width: 770px) {
         #footer_initial {
             grid-template-columns: repeat(1, 1fr);
             padding: 3rem 2rem;
         }
 
-        #btnVoltarAoTopo {
-            font-size: 14px;
+        .back-to-top {
+            font-size: 0.8rem;
+            right: 10px;
+            bottom: 10px;
         }
 
         .habilidades .habilidades-box {
@@ -740,6 +811,10 @@ footer {
             text-align: center;
             position: relative;
             left: 0;
+        }
+
+        #footer_copyright {
+            font-size: 0.8rem;
         }
     }
 }
